Protect last active human principals
